k8s/1_stocks_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: cloudacademy
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: cloudacademydevops/stocks-db:v1
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cloudacademy
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
